--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -17,13 +17,15 @@ else
         <thead>
             <tr>
                 <td>Movie</td>
+                <td>Genre</td>
             </tr>
         </thead>
         <tbody>
             @foreach (var movie in Model)
             {
                 <tr>
-                    <td>@movie.Name</td>
+                    <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id}, null )</td>
+                    <td>@movie.Genre.Name</td>
                 </tr>
             }
         </tbody>
