Add validation to Movie view

--- a/Vidly/Content/Site.css
+++ b/Vidly/Content/Site.css
@@ -31,3 +31,9 @@ textarea {
     border: 2px solid red;
 
 }
+
+.validation-summary-errors{
+    color:red;
+    font-weight:bold;
+    font-size:large;
+}
