--- a/Vidly/Views/Movies/MovieForm.cshtml
+++ b/Vidly/Views/Movies/MovieForm.cshtml
@@ -8,23 +8,33 @@
 
 @using (@Html.BeginForm("Save", "Movies"))
 {
+    
+    @Html.ValidationSummary(true, "Please correct the errors before continuing.")
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.Name )
         @Html.TextBoxFor(m => m.Movie.Name, new {@class="form-control"})
+        @Html.ValidationMessageFor(m => m.Movie.Name )
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.ReleaseDate)
-        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:dd/MM/yyyy}", new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:dd/MM/yyyy}", new { @class = "form-control"})  @* If I want to display a default value, , @Value = DateTime.MinValue.ToShortDateString()  } )*@
+        @Html.ValidationMessageFor(m => m.Movie.ReleaseDate)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.GenreId)
         @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genres,"Id","Name"), null , new {@class="form-control"})
+        @Html.ValidationMessageFor(m => m.Movie.GenreId)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.NumberInStock )
-        @Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Movie.NumberInStock)
+        @Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control" }) @* , @Value = "0" *@
+        @Html.ValidationMessageFor(m => m.Movie.NumberInStock)
     </div>
     @Html.HiddenFor(m => m.Movie.Id)
+    @Html.AntiForgeryToken()
+    @section scripts
+    { 
+        @Scripts.Render("~/bundles/jqueryval")}
     <button type="submit" class="btn btn-primary">Save</button>
 }
 
