--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -12,9 +12,10 @@
 }
 else
 {
-    <table class="table table-bordered table-hover">
+    <table class="table table-bordered table-hover" id="customers">
         <thead>
             <tr>
+                <th>Delete</th>
                 <th>Customer</th>
                 <th>Membership Type</th>
             </tr>
@@ -23,16 +24,31 @@ else
             @foreach (var customer in Model)
             {
                 <tr>
+                    <td><button class="btn btn-link js-delete" data-customer-id="@customer.Id" >Delete</button></td>
                     <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
                     <td>@customer.MembershipType.Name</td>
                 </tr>
             }
-        </tbody>
-
-
-        
+        </tbody>       
     </table>
 }
 
+@section scripts{
+    <script>
+        $(document).ready(function () {
+            $("#customers .js-delete").on("click", function () {
+                var button = $(this);
+                if (confirm("Are  you sure you want to delete this customer?")) {
+                    $.ajax({
+                        url: "/api/customers/" + button.attr("data-customer-id"),
+                        method: "DELETE",
+                        success: function(){
+                            button.parents("tr").remove();
+                        }
+                    });
+                }
 
-
+            });
+        });
+    </script>
+    }
