--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -6,6 +6,11 @@
 
 <h2>Customers</h2>
 
+@* @if(!Model.Any())
+{
+    <p>We don't have any customers yet</p>
+} *@
+
 <table class="table table-bordered table-hover" id="customers">
     <thead>
         <tr>
@@ -29,7 +34,7 @@
 @section scripts{
     <script>
         $(document).ready(function () {
-            $("#customers").DataTable({
+            var table = $("#customers").DataTable({
                 ajax: {
                     url: "/api/customers",
                     dataSrc: ""
@@ -43,7 +48,7 @@
 
                     },
                     {
-                        data: "name"
+                        data: "membershipType.name"
                     },
                     {
                         data: "id",
@@ -63,7 +68,7 @@
                             url: "/api/customers/" + button.attr("data-customer-id"),
                             method: "DELETE",
                             success: function () {
-                                button.parents("tr").remove();
+                                table.row(button.parents("tr")).remove().draw();
                             }
                         });
                     }
