--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -9,31 +9,80 @@
 
 @Html.ActionLink("New Movie", "New", null, new { @class="btn btn-info" }) 
 
-
-@if(Model.Count() < 1)
-{
-    <h4>We have not started stocking movies yet!</h4>
-}
-else
-{
-    <table class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <td>Movie</td>
-                <td>Genre</td>
-            </tr>
-        </thead>
-        <tbody>
+<table class="table table-bordered table-hover" id="movies">
+    <thead>
+        <tr>
+            <td>Movie</td>
+            <td>Genre</td>
+            <td>Delete</td>
+        </tr>
+    </thead>
+    <tbody>
+        @*
             @foreach (var movie in Model)
             {
                 <tr>
-                    <td>@Html.ActionLink(movie.Name, "Edit", "Movies", new { id = movie.Id}, null )</td>
+                    <td>@Html.ActionLink(movie.Name, "Edit", "Movies", new { id = movie.Id }, null)</td>
                     <td>@movie.Genre.Name</td>
+                    <td><button class="btn btn-link js-delete" data-movie-id="@movie.Id">Delete</button></td>
                 </tr>
-            }
-        </tbody>
-    </table>
-}
+            }*@
+    </tbody>
+</table>
+
+@section scripts{
+    <script>
+        $(document).ready(function(){
+
+            var table = $("#movies").DataTable({
+                ajax: {
+                    url: "/api/movies",
+                    dataSrc: ""
+                },
+
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, movie) {
+                            return "<a href='/movies/edit/" + movie.id + "'>" + movie.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "genre.name"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class='btn btn-link js-delete' data-movie-id=" + data + ">Delete</button>";
+                        }
+                    }
+                ]
+
+            });
+
+
+
+            $("#movies").on("click", ".js-delete", function () {
+
+                var button = $(this);
+
+                bootbox.confirm("Are you sure you want to delete the movie?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/movies/" + button.attr("data-movie-id"),
+                            method: "DELETE",
+                            success: function () {
+                                table.row(button.parents("tr")).remove().draw();
+                            }
+                        });
+                    }
+                })
+
+
+            })
+        })
+    </script>
+    }
 
 
 
